# srccpy_vs

./: .gitignore  CMakeLists.txt  README.md  build.ps1
doc/: CMAKE_IMPROVEMENTS.md  PROJECT_SUMMARY.md
git-hooks/: install.sh  pre-commit  pre-push
include/: common.h  compat.h  controller.h  device.h  net.h  str_util.h
src/: CMakeLists.txt  common.cpp  common.h  controller.cpp  controller.h  device.cpp  device.h  env.cpp  env.h  main.cpp  net.cpp  server.cpp  server.hpp  srccpy.cpp  srccpy.h  srccpy.hpp  str_util.cpp  str_util.h
src/adb/: adb.cpp  adb.h  adb_device.h  adb_parser.cpp  adb_parser.h  adb_tunnel.cpp  adb_tunnel.h
src/asio/: sc_event.cpp  sc_event.h
src/codec/: demuxer.cpp  demuxer.h  packet_merge.cpp  packet_merge.h  packet_sink.cpp  packet_sink.h  packet_source.cpp  packet_source.h
src/event/: sc_event.h
src/server/: sc_server_cmd_builder.cpp  sc_server_cmd_builder.hpp  server.cpp  server.hpp
src/util/: binary.h  options.cpp  options.h  process_intr.cpp  process_intr.h  rand.cpp  rand.h  sc_file.cpp  sc_file.h  sc_intr.cpp  sc_intr.h  sc_log.cpp  sc_log.h  sc_process.cpp  sc_process.h  sc_thread.cpp  sc_thread.h  tick.cpp  tick.h
